--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:title="@string/app_name"
+    style="@style/Toolbar"
     >
 
 </android.support.v7.widget.Toolbar>
