--- a/app/src/main/res/layout/picker_layout.xml
+++ b/app/src/main/res/layout/picker_layout.xml
@@ -1,38 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_weight="1"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:text="@string/home_decrease"
-        style="@style/RobotoButtonStyle"/>
+        android:src="@drawable/ic_action_content_remove"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:fabSize="normal"
+         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_weight="100"
         android:layout_marginTop="10dp"
-        android:gravity="center_vertical"
+        android:gravity="center"
         android:text="@string/home_sets"/>
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_weight="1"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:text="@string/home_increase"
-        style="@style/RobotoButtonStyle"/>
+        android:src="@drawable/ic_action_content_add"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:fabSize="normal"
+        />
 
 
 </LinearLayout>
