Now when timer on, user see stats and progress

--- a/app/src/main/res/layout/timer_fragment.xml
+++ b/app/src/main/res/layout/timer_fragment.xml
@@ -2,24 +2,57 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-    android:background="@color/justWhite">
+                android:background="@color/justWhite">
+
+    <RelativeLayout
+        android:id="@+id/timerCircularAndState"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.github.rahatarmanahmed.cpv.CircularProgressView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/progress_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            app:cpv_indeterminate="true"
+            app:cpv_thickness="8dp"
+            />
+
+        <TextView
+            android:id="@+id/timerState"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:gravity="center"/>
+
+    </RelativeLayout>
+
 
     <TextView
         android:id="@+id/timerSets"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/timerCircularAndState"
+        android:layout_centerVertical="true"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/timerSeconds"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/timerSets"/>
+        android:layout_below="@id/timerSets"
+        android:layout_centerVertical="true"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/timerRest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/timerSeconds"/>
+        android:layout_below="@id/timerSeconds"
+        android:layout_centerVertical="true"
+        android:gravity="center"/>
 
 
 </RelativeLayout>
