--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="justWhite">#FFFFFF</color>
     <color name="justGrey">#757575</color>
+    <color name="justGreen">#68d995</color>
 
 </resources>
