--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -8,39 +8,10 @@
     <include android:id="@+id/homeToolbar"
         layout="@layout/tool_bar"/>
 
-
-    <TableLayout
-        android:id="@+id/homeTabLay"
+    <FrameLayout
+        android:id="@+id/mainContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/homeToolbar">
-
-        <include
-            android:id="@+id/homeSetsLay"
-            layout="@layout/picker_layout"
-            />
-
-        <include
-            android:id="@+id/homeSecondsLay"
-            layout="@layout/picker_layout"/>
-
-        <include
-            android:id="@+id/homeRestLay"
-            layout="@layout/picker_layout"/>
-
-    </TableLayout>
-
-    <Button
-        android:id="@+id/homeStartButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_alignParentBottom="true"
-        android:text="@string/home_start"
-        style="@style/RobotoButtonStyle"
-        />
+        android:layout_height="match_parent"
+        android:layout_below="@id/homeToolbar"/>
 
 </RelativeLayout>
