--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:title="@string/app_name"
-    style="@style/Toolbar"
+                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="wrap_content"
+                                   android:title="@string/app_name"
+                                   style="@style/Toolbar"
+                                   app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
     >
 
 </android.support.v7.widget.Toolbar>
