--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,8 +16,12 @@
 
     <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
         <item name="android:fontFamily">sans-serif-light</item>
-        <item name="android:textColor">@color/justGrey</item>
+        <item name="android:textColor">@color/justWhite</item>
         <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="RobotoTextViewStyle.Timer" parent="RobotoTextViewStyle">
+        <item name="android:textSize">48sp</item>
     </style>
 
     <style name="RobotoButtonStyle" parent="Widget.Design.FloatingActionButton">
