--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,9 @@
         <item name="android:textColor">@color/justWhite</item>
         <item name="android:textSize">24sp</item>
         <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
     </style>
 
 </resources>
