--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,10 @@
     <color name="colorPrimary">#F44336</color>
     <color name="colorPrimaryDark">#F44336</color>
     <color name="colorBackground">#ffebee</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#F44336</color>
     <color name="justWhite">#FFFFFF</color>
     <color name="justGrey">#212121</color>
     <color name="justGreen">#68d995</color>
+    <color name="colorSpinner">#e57373</color>
 
 </resources>
