Prepare time added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="justGrey">#212121</color>
     <color name="justGreen">#68d995</color>
     <color name="colorSpinner">#e57373</color>
+    <color name="justYellow">#ffeb3b</color>
 
 </resources>
